src/test/deca/context/valid/thibault/optimisation/testOpt8.deca
{
	float a, b, c, d, e, f;
	int g=0;
	a=5*5*5*4/2;
	b=(9/3)-1;
}
