src/test/deca/context/invalid/pierre/op-arith.deca
{
    float a = 1 + 0.5 ;
    boolean b = true * true ;
}